# verl-recipe

./: .gitignore  README.md  add_coauthor.sh  log.txt  test.py
SDPO/: README.md  grpo_baseline.sh  grpo_baseline_smoke.sh  sdpo_advantage.py  sdpo_main.py  train.sh
agentic/: README.md  agentic-qwen2.5-3b.sh  agentic_main.py  mcp-tools.sh  remote-agent.yaml
asft/: README.md  REQUIRED_VERL.txt  fsdp_sft_trainer_asft.py  prepare_data.py  run_asft.sh  sft_trainer.yaml
async_flow/: README.md  REQUIRED_VERL.txt  async_flow_trainer.py  config.py  grpo_main.py  requirements.txt  run_async_grpo_qwen0.5b_gsm8k_local.sh  run_async_grpo_qwen3_30b_gsm8k_local.sh  run_async_grpo_qwen7b_gsm8k_local.sh  run_async_grpo_qwen7b_gsm8k_weight_cache_h2d_staleness0.sh  run_ray_cluster.sh
atropos/: README.md  __init__.py  atropos_client.py  atropos_data.py  atropos_integration.py  atropos_ray_trainer.py  atropos_trainer.py  data_loader.py  example_gsm8k_grpo.py  generate_proxy.py  grpo_atropos_trainer.py  launch_atropos_verl.py  launch_atropos_verl_services.py  main_atropos.py  run_atropos.sh  run_qwen2_5-3b_gsm8k_grpo_lora_atropos.sh  test_atropos_integration.py
atropos_reward/: README.md  reward_registry.py
char_count/: README.md  train_sft.sh
context_management/: README.md  REQUIRED_VERL.txt  agent_loop_with_context_management.py  context_manager.py  context_manager_plugin.md  test_agent_loop_with_context_management.py  test_context_manager.py
dapo/: dapo_ray_trainer.py  (+9 more)
verl_tinker/: README.md  pyproject.toml  schemas.py  tinker_ops.py  tinker_router.py
verl_tinker/backends/: __init__.py  _loss.py  colocated.py
verl_tinker/client_examples/: README.md  hdfs_tokenizer_patch.py  pyproject.toml  run_all_verl_tinker_nightly_ci_job.sh  run_single_test.py
verl_tinker/client_examples/tasks/: run_single_test.py  run_single_test.sh  utils.py
verl_tinker/client_examples/tasks/math_rl/: gsm8k.py
verl_tinker/client_examples/tasks/math_sft_rl/: gsm8k.py
verl_tinker/client_examples/tasks/opd/: __init__.py  deepmath.py  multi_teacher.py
verl_tinker/client_examples/tasks/sdft/: single_task.py
verl_tinker/client_examples/tasks/sft/: no_robots.py  tulu3.py
verl_tinker/config/advance/: gpt_oss_120b_actor_rollout_4_nodes.yaml  qwen3_1b7_actor_rollout_vexact.yaml
verl_tinker/config/quick_start/: actor_rollout_ref.yaml
verl_tinker/configs/advance/: actor_rollout_with_profiler.yaml  gpt_oss_120b_actor_rollout.yaml  gpt_oss_120b_actor_rollout_4_nodes.yaml  gpt_oss_20b_actor_rollout.yaml  qwen3_1b7_actor_qwen3_30b_a3b_teacher.yaml  qwen3_1b7_actor_rollout_vexact.yaml  qwen3_8b_actor_qwen3_32b_qwen3_235b_teachers.yaml
verl_tinker/configs/quick_start/: actor.yaml  actor_rollout.yaml  actor_rollout_ref.yaml
verl_tinker/data/: datum_processing.py
verl_tinker/launch_scripts/: entrypoint_gpt_oss_20b_actor_rollout.sh  entrypoint_qwen3_1b7_actor.sh  entrypoint_qwen3_1b7_actor_rollout.sh  entrypoint_qwen3_1b7_actor_rollout_ref.sh  entrypoint_qwen3_1b7_actor_rollout_vexact.sh  entrypoint_tinker_server_from_config.sh  ray_runtime_env_qwen3_1b7.yaml  ray_runtime_env_qwen3_1b7_vexact.yaml
verl_tinker/src/verl_tinker/: __init__.py  config_utils.py  logging_utils.py  start.py  state_tracker.py  tinker_ops.py  tinker_router.py
verl_tinker/src/verl_tinker/backends/: __init__.py  backend_utils.py  colocated.py  model_lifecycle.py  profiler_util.py  teacher.py
verl_tinker/tests/: fake_tinker.py  test_colocated_backend.py  test_config_utils.py  test_data_converter.py  test_profiler_util.py  test_start.py  test_state_tracker.py  test_teacher_backend.py  test_tinker_ops_sample.py  test_tinker_router.py  test_tinker_server.py
(+419 files in other folders)
