[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl-tinker"
version = "0.1.0"
description = "Tinker-compatible server backed by VeRL actors"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.125.0",
    "flash-attn",
    "torch==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
    "torchaudio==2.11.0+cu130",
    "torchcodec>=0.12.0",
    "triton==3.6.0",
    "cuda-python>=13.0.3",
    "torch-c-dlpack-ext",
    "apache-tvm-ffi==0.1.12",
    "nvidia-nccl-cu13>=2.28.9",
    "nvidia-cudnn-cu13>=9.19.0.56",
    "nvidia-cutlass-dsl[cu13]>=4.6.0.dev0; sys_platform == 'linux'",
    "nvidia-cutlass-dsl-libs-base>=4.6.0.dev0; sys_platform == 'linux'",
    "nvidia-cutlass-dsl-libs-cu13>=4.6.0.dev0; sys_platform == 'linux'",
    "quack-kernels==0.5.1",
    "liger-kernel",
    "flash-linear-attention==0.4.2",
    "peft==0.18.1",
    "protobuf>=6.30.2,<7",
    "ray[serve]",
    "tinker==0.19.0",
    "transformers==5.9.0",
    "veomni @ git+https://github.com/ByteDance-Seed/VeOmni.git@ff89f19056599b868b6dbfeb224c90c39eb1b4de",
    "verl @ git+https://github.com/verl-project/verl.git@1ff76cc625e9820d2434dad1b6d9b8e5dd26a359",
    "vllm>=0.22.0,<0.23",
    "vexact @ git+https://github.com/verl-project/vexact.git@2da1ea2181b5fe09597077c9dc86539ec047e610",
    "kernels==0.14.1",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
required-version = ">=0.9.8,<0.12"
environments = [
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "apache-tvm-ffi==0.1.12",
    "cuda-python==13.0.3",
    "datasets==2.21.0",
    "fastapi>=0.125.0",
    "starlette>=1.0.1",
    "flash-linear-attention==0.4.2",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cutlass-dsl[cu13]==4.6.0.dev0",
    "nvidia-nccl-cu13==2.28.9",
    "packaging<25.0",
    "peft==0.18.1",
    "protobuf>=6.30.2,<7",
    "torch==2.11.0+cu130",
    "torchaudio==2.11.0+cu130",
    "torchcodec==0.12.0",
    "torchvision==0.26.0+cu130",
    "transformers==5.9.0",
    "triton==3.6.0",
]
no-build-isolation-package = [
    "flash-attn",
]

[tool.uv.sources]
flash-attn = [
    { url = "https://github.com/Luosuu/flash-attention3-wheels/releases/download/v0.0.5/flash_attn-2.8.4+20260610.cu130torch2110cxx11abitrue.fb02fc.sm80sm89sm90sm100-cp312-cp312-linux_x86_64.whl", marker = "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torch = { url = "https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp312-cp312-manylinux_2_28_x86_64.whl", marker = "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchcodec = { index = "pypi" }
vllm = { index = "pypi" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = true
