[project]
name = "ci"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "byted-wandb>=0.13.98",
    "bytedray[serve]==2.46.0.16",
    "orjson>=3.11.9",
    "tinker>=0.18.0",
    "tinker-cookbook[math-rl]==0.4.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://bytedpypi.byted.org/simple/"
